# InfernoEngine

./: .gitignore  CMakeLists.txt
include/: TextureManager.h  camera.h  collider.h  dungeon.h  dungeon_constants.h  enemy.h  level.h  player.h  projectile.h  room.h  room_level.h  utils.h  weapon.h
include/enemies/: fly.h  stalker.h  zombie.h
include/weapons/: bow.h  sword.h
src/: TextureManager.cpp  camera.cpp  collider.cpp  dungeon.cpp  enemy.cpp  level.cpp  main.cpp  player.cpp  projectile.cpp  room.cpp  room_level.cpp
src/enemies/: fly.cpp  stalker.cpp  zombie.cpp
src/weapons/: bow.cpp  sword.cpp
